# Media-Portal

./: Cargo.toml
MPortal/: Cargo.toml
MPortal-daemon/: Cargo.toml
MPortal-daemon/src/: config.rs  main.rs  utils.rs
asset/: config.toml
installer/: install.ps1
mportal/: Cargo.toml
mportal-daemon/: Cargo.toml
mportal-daemon/src/: config.rs  lib.rs  main.rs  utils.rs
mportal/src/: app.rs  fonts.rs  main.rs
