[package]
name = "mportal-daemon"
version = "0.2.2"
edition = "2024"

[lib]
name = "mportal_core"
path = "src/lib.rs"

[[bin]]
name = "mportal-cli"
path = "src/bin/mportal-cli.rs"

[[bin]]
name = "mportal-daemon"
path = "src/bin/mportal-daemon.rs"

[dependencies]
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
toml = "1.0.6"
dirs = "6.0.0"
notify-rust = "4.12.0"
clap = { version = "4.6.0", features = ["derive"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }
chrono = "0.4.38"